Bug 237171 - Grammatical error in 'Insert File Recent' label
Summary: Grammatical error in 'Insert File Recent' label
Status: VERIFIED FIXED
Alias: None
Product: kmail2
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Compiled Sources Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2010-05-10 23:17 UTC by Sabine Faure
Modified: 2010-05-11 18:43 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Sabine Faure 2010-05-10 23:17:17 UTC
Version:            (using Devel)
Compiler:          gcc 4.3.2 
OS:                Linux
Installed from:    Compiled sources

- Launch Kmail
- Click on 'New' button
- Go to Message menu/Insert File Recent...

The label should be modified into 'Insert Recent File...'.

Trunk, Svn Rev 1125123
Comment 1 Thomas McGuire 2010-05-11 01:56:10 UTC
SVN commit 1125213 by tmcguire:

Better wording for the insert recent file action.

BUG: 237171
BUG: 237168

 M  +3 -2      kmcomposewin.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1125213
Comment 2 Sabine Faure 2010-05-11 18:43:29 UTC
It is corrected now.

The new label is now: 'Insert Recent Text File'.

Trunk, Svn Rev 1125510