Better wording for the insert recent file action.

BUG: 237171
BUG: 237168

svn path=/trunk/KDE/kdepim/kmail/; revision=1125213